# ais

./: .gitignore  .ruff.toml  README.md  pyproject.toml
.config/: example.config.toml  init.sql
scripts/: init_db.py
src/ais/: common.py  config.py  db.py  main.py
