[build-system]
requires = ["uv_build == 0.9.27"]
build-backend = "uv_build"

[project]
name = "ais"
version = "0.0.1"
description = "Monitoring cows on the farm"
readme = "README.md"
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
license = "Unlicense"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "toml-rs == 0.2.2",
    "adaptix == 3.0.0b11",
    "aiosqlite == 0.22.1",
    "aiosqlitepool == 1.0.0",
    "fastapi[standard] == 0.128.0",
    "uvicorn == 0.40.0",
    "ultralytics == 8.4.8",
]

[dependency-groups]
dev = [
    "ty == 0.0.14",
    "ruff == 0.14.14",
]
